--- a/styles/main.css
+++ b/styles/main.css
@@ -25,7 +25,7 @@ logo.img{
 #header{
     font-family: "Montserrat", sans-serif; 
 }
-p1{
+p, h1, section, h2, li, h3{
     font-family: "Montserrat", sans-serif;
     color: white;
 }
@@ -79,7 +79,7 @@ profile.img{}
 .timeline-container{
     width: 1200px;
     margin: 200px auto;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: row;
 }
 
