--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,8 @@
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
-
+@font-face{
+    font-family: "Montserrat", sans-serif;
+ src: url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+}
 .flex-container{
     display:flex;
     flex-direction:column;
